# adsb-feed

./: .gitattributes  .gitignore  DESIGN_DESCRIPTION.md  LICENSE  README.md  TEST_MODE.md  pyproject.toml  test_dump1090_mock.py
rust/: CLAUDE.md  Cargo.toml  README.md  RUST_IMPLEMENTATION.md
rust/adsb-agent/: .env.example  .gitignore  README.md  install_lfm-25-audio-server.sh  langgraph.json  pyproject.toml
rust/adsb-agent/src/adsb_agent/: __init__.py  graph.py  llm.py  models.py  prompt_sections.yaml  system_prompt.md.j2  tracing.py
rust/adsb-agent/src/adsb_agent/voice/: __init__.py  lfm2_audio.py
rust/adsb-agent/tests/: conftest.py  test_agent.py  test_dynamic_context.py  test_dynamic_tools.py  test_graph.py  test_lfm2_sse.py  test_openapi.py  test_session_tagging.py  test_sse_heartbeat.py  test_tool_result_loop.py  test_tool_spans.py  test_tools.py  test_tracing.py  test_voice.py
rust/adsb-data-engine/: Cargo.toml  README.md
rust/adsb-data-engine/docs/: DESIGN.md
rust/adsb-data-engine/src/: error.rs  geo.rs  lib.rs  sbs_parser.rs  storage.rs  types.rs
rust/adsb-pulsar-client/: .gitignore  BUILD_REQUIREMENTS.md  CLAUDE.md  Cargo.toml  DOCUMENTATION.md  Makefile  QUICKSTART.md  README.md  adsb-pulsar-client.service
rust/adsb-pulsar-client-desktop/: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  duckdb_storage_browser.ipynb  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
rust/adsb-pulsar-client-desktop/agent/: .env.example  .gitignore  README.md  pyproject.toml
rust/adsb-pulsar-client-desktop/agent/src/adsb_agent/: __main__.py  config.py  graph.py  llm.py  main.py  models.py  prompt_sections.yaml  system_prompt.md.j2  system_prompt.py  tools.py  tracing.py
rust/adsb-pulsar-client-desktop/agent/tests/: test_agent.py  test_dynamic_tools.py  test_system_prompt_render.py  test_tool_result_loop.py  test_tracing.py  test_voice.py
rust/adsb-pulsar-client-desktop/docs/: DESIGN.md  DOCUMENTATION.md  architecture-ipc-animated.html
rust/adsb-pulsar-client-desktop/docs/plans/: 2026-02-16-export-import-tracks-design.md  2026-02-16-export-import-tracks.md  2026-02-16-rxts-msg-count-columns-design.md  2026-02-16-rxts-msg-count-columns.md  2026-02-20-left-panel-resizable-toggle-design.md  2026-02-20-left-panel-resizable-toggle.md  2026-02-22-dual-handle-range-slider-design.md  2026-02-22-filter-multi-id-and-imported-design.md  2026-02-22-imported-tracks-selection-design.md  2026-02-22-imported-tracks-selection.md  2026-02-23-duckdb-history-ui-design.md  2026-02-23-duckdb-history-ui.md  2026-02-23-timezone-config-design.md  2026-02-23-timezone-config.md  2026-03-04-analysis-mode.md  2026-03-15-rolling-db-swap.md  2026-03-28-events-of-interest.md  2026-03-28-status-event-audit-trail.md  copilotkit-ag-ui-local-agent.md  data-acq-and-engine-architecture.md  flight-segmentation.md
rust/adsb-pulsar-client-desktop/docs/plans/deferred/: duckdb-quack-client-server-redesign.md  gpu-optimization-apple-silicon.md  webgpu-map-rendering.md
rust/adsb-pulsar-client-desktop/src-tauri/: Cargo.toml  tauri.conf.json
rust/adsb-pulsar-client-desktop/src-tauri/capabilities/: default.json
rust/adsb-pulsar-client-desktop/src-tauri/icons/: icon.icns
rust/adsb-pulsar-client-desktop/src-tauri/src/: bridge.rs  commands.rs  lib.rs  main.rs  sbs_parser.rs  state.rs  tool_server.rs  tool_service.rs
rust/adsb-pulsar-client-desktop/src/app/: globals.css  layout.tsx  page.tsx
rust/adsb-pulsar-client-desktop/src/app/settings/: page.tsx
rust/adsb-pulsar-client-desktop/src/components/: AIChatContent.tsx  AIChatPanel.tsx  AircraftDetailsPanel.tsx  AircraftTable.tsx  AltitudeLegend.tsx  CenterOnAntennaButton.tsx  ConnectionStatus.tsx  CopilotKitProvider.tsx  DBHistoryAnalytics.tsx  DBHistoryContent.tsx  DBHistoryPanel.tsx  DetectionRadar.tsx  EventFormDialog.tsx  EventsOfInterestContent.tsx  EventsOfInterestPanel.tsx  Filters.tsx  HistoryBrowser.tsx  LeftPanel.tsx  Map.tsx  MapContextMenu.tsx  MapInner.tsx  MapTileToggle.tsx  MetricsBar.tsx  MicButton.tsx  ModeTabs.tsx  RangeSlider.tsx  ResizeHandle.tsx  StatusTimeline.tsx
rust/adsb-pulsar-client-desktop/src/components/__tests__/: AIChatContent.test.tsx  AIChatContent.threadId.test.tsx  AIChatPanel.test.tsx  AircraftDetailsPanel.test.tsx  AircraftTable.test.tsx  AltitudeLegend.test.tsx  CenterOnAntennaButton.test.tsx  ConnectionStatus.test.tsx  DBHistoryAnalytics.test.tsx  DBHistoryContent.test.tsx  DBHistoryPanel.test.tsx  DetectionRadar.test.tsx  EventFormDialog.test.tsx  EventsOfInterestContent.test.tsx  EventsOfInterestPanel.test.tsx  Filters.test.tsx  HistoryBrowser.test.tsx  LeftPanel.test.tsx  MapContextMenu.test.tsx  MetricsBar.test.tsx  ModeTabs.test.tsx  RangeSlider.test.tsx  StatusTimeline.test.tsx
rust/adsb-pulsar-client-desktop/src/components/chat/: ActionConfirmCard.tsx  AircraftSummaryTable.tsx  ChatCard.tsx  (+9 more)
rust/adsb-pulsar-client-desktop/src/contexts/: AircraftTrackingContext.tsx
rust/adsb-pulsar-client-desktop/src/hooks/: useAircraftTracks.ts  useChatThreadId.ts  useConnectionStatus.ts  useCopilotContext.ts  useCopilotTools.ts  useDisplayTz.ts  useEventsOfInterest.ts  useLocalStorage.ts  useMapZoom.ts  useMetrics.ts  useRecordingState.ts  useSimulatedTracks.ts  useTauriEvent.ts  useVoiceInput.ts  useWindowedRate.ts
rust/adsb-pulsar-client-desktop/src/lib/: aircraft-details.ts  aircraft-icon.ts  arrow-utils.ts  browse-reducer.ts  colors.ts  commands.ts  db-history-analytics.ts  detection-radar.ts  file-io.ts  format.ts  geo.ts  geojson.ts  h3-density.ts  history-convert.ts  history-time-filter.ts  simulation-data.ts  sort-tracks.ts  subsample.ts  track-ordering.ts  types.ts
rust/adsb-pulsar-client-desktop/src/test/: setup.ts
rust/adsb-pulsar-client/docs/: DESIGN.md
rust/adsb-pulsar-client/src/: client.rs  config.rs  connection_monitor.rs  error.rs  lib.rs  main.rs  metrics.rs
rust/adsb-pulsar-client/src/forwarder/: file.rs  mod.rs  pulsar_forwarder.rs
rust/adsb-pulsar-client/tests/: test_message_flow.rs
rust/adsb-pulsar-client/tests/common/: mod.rs
(+120 files in other folders)
