[workspace]
members = ["adsb-pulsar-client", "adsb-data-engine", "adsb-pulsar-client-desktop/src-tauri"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = "0.4"
chrono-tz = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
