[package]
name = "adsb-data-engine"
version = "0.1.0"
edition = "2021"
description = "ADS-B data storage and query engine with DuckDB"
authors = ["ADS-B Project Contributors"]

[dependencies]
duckdb = { version = "1.2", features = ["bundled"] }
arrow = { version = "56", default-features = false, features = ["ipc"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
