[package]
name = "adsb-pulsar-client"
version = "0.1.0"
edition = "2021"
authors = ["ADS-B Project Contributors"]
description = "High-performance ADS-B feed client for Apache Pulsar written in Rust"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Pulsar client
pulsar = { version = "6.3", default-features = false, features = ["tokio-runtime", "compression"] }

# CLI argument parsing (optional, for CLI binary)
clap = { version = "4.5", features = ["derive", "env"], optional = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time utilities
chrono = { workspace = true }

# Metrics
prometheus = { version = "0.13", optional = true }

# Memory utilities
bytes = "1.7"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["cli"]
cli = ["clap"]
metrics = ["prometheus"]

[lib]
name = "adsb_pulsar_client"
path = "src/lib.rs"

[[bin]]
name = "adsb-pulsar-client"
path = "src/main.rs"
required-features = ["cli"]
