[project]
name = "adsb-agent"
version = "0.1.0"
description = "AG-UI agent service for ADS-B Aircraft Tracker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "ag-ui-protocol>=0.1",
    "openai>=1.60",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mlflow-tracing>=3.12",
    "boto3>=1.35",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.28",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]
voice = [
    "sounddevice>=0.5",
    "numpy>=2.0",
    "llama-cpp-python>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adsb_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
