[package]
name = "adsb-pulsar-client-desktop"
version = "0.1.0"
edition = "2021"
description = "ADS-B Aircraft Tracker Desktop Application"
authors = ["ADS-B Project Contributors"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
adsb-pulsar-client = { path = "../../adsb-pulsar-client", default-features = false }
adsb-data-engine = { path = "../../adsb-data-engine" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
serde_json = { workspace = true }

[lib]
name = "adsb_pulsar_client_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "adsb-pulsar-client-desktop"
path = "src/main.rs"
